--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/app.js",
-    "dev": "nodemon src/app.js -e ejs,html,css"
+    "dev": "nodemon src/app.js -e ejs,html,css",
+    "error":"no error defined command yet"
   },
   "author": "",
   "license": "ISC",
